--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "dependencies": {
     "@popmotion/popcorn": "0.4.4",
     "framer-motion": "2.6.5",
+    "history": "5.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-router": "6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
